Update and rename setup.md to readme

--- a/readme
+++ b/readme
@@ -26,3 +26,6 @@ Setting up a fresh computer.
 - [iTerm2](https://iterm2.com) - Terminal alternative 
 - [Copyclip](https://apps.apple.com/us/app/copyclip-clipboard-history/id595191960?mt=12) - Clipbord manager
 
+## 
+- [tmux](https://github.com/tmux/tmux/wiki)
+- [zsh](https://ohmyz.sh/#install) 
